# reBorn_i

./: .env.example  .env.production.example  .env.render  .gitignore  .renderignore  .vercelignore  DATABASE_SEEDED.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  GOOGLE_OAUTH_FIX.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_COMPLETE.md  PAYMENT_FLOW_GUIDE.md  PAYMENT_FLOW_VISUAL.md  PAYMENT_MODAL_FIX.md  PAYMENT_MODAL_FIX_APPLIED.md  PAYMENT_MODAL_TROUBLESHOOTING.md  QUICKSTART.md  QUICK_START.md  RAZORPAY_INTEGRATION_CHECKLIST.md  README.md  REGISTRATION_409_FIX.md  SYSTEM_DESIGN.md  TEST_CREDENTIALS.md  TEST_REPORT.md  TROUBLESHOOTING_SUMMARY.md  main.py  pyproject.toml  reborn_dev.db  render.yaml  requirements-prod.txt  requirements.txt  seed_test_users.py  vercel.json
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  routes.py
app/config/: __init__.py  prompt_templates.py  scoring_weights.py  settings.py
app/models/: __init__.py  database.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  blueprint_generator.py  career_simulation.py  (+5 more)
data/: job_market_dataset.json
docker/: Dockerfile  docker-compose.yml
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
scratch/: test_all_modules.py  test_pdf_parsing.py
tests/: __init__.py  conftest.py  test_api.py  test_blueprint_generator.py  test_career_simulation.py  test_hiring_pipeline.py  test_market_radar.py  test_rejection_engine.py  test_resume_processor.py  test_security.py
(+57 files in other folders)
